[package]
name = "mdbook-image-size"
version = "0.1.0"
edition = "2021"
authors = ["George Liu <39660787@qq.com>"]
license = "MIT"
repository = "https://github.com/lhybdv/mdbook-image-size.git"
description = "A mdbook preprocessor which support image size syntax"

[dependencies]
anyhow = "1.0.79"
clap = "4.4.13"
mdbook = "0.4.36"
serde_json = "1.0.111"
semver = "1.0.21"
pulldown-cmark = "0.9.3"
regex = "1.10.2"
once_cell = "1.19.0"

[lib]
name = "mdbook_image_size"
path = "src/lib.rs"

[[bin]]
name = "mdbook-image-size"
path = "src/bin/mdbook-image-size.rs"
