[package]
name = "mdbook-image-size"
version = "0.1.0"
edition = "2021"
authors = ["George Liu <39660787@qq.com>"]
license = "MIT"
repository = "https://github.com/lhybdv/mdbook-image-size.git"
description = "A mdbook preprocessor which support image size syntax"

[dependencies]
anyhow = "1.0.81"
clap = "4.5.4"
mdbook = "0.4.37"
serde_json = "1.0.115"
semver = "1.0.22"
pulldown-cmark = "0.10.0"
regex = "1.10.4"
once_cell = "1.19.0"

[lib]
name = "mdbook_image_size"
path = "src/lib.rs"

[[bin]]
name = "mdbook-image-size"
path = "src/bin/mdbook-image-size.rs"
